<?xml version="1.0"?>
<package format="2">
  <name>fisheye_stereo_rectify</name>
  <version>0.0.0</version>
  <description>The fisheye_stereo_rectify package</description>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
